<resources>
    <string name="app_name">MyFirstAndroidApplication</string>
    <string name="hello_world">hello world</string>
    <string name="click_me">Click me</string>
    <string name="termeni_si_conditii">termeni si conditii</string>
    <string name="email_address">Email address</string>
    <string name="submit">submit</string>
    <string name="accepta_termeni_si_conditii">Accepta termeni si conditii</string>
    <string name="long_text">A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout. Scroll view supports vertical scrolling only. For horizontal scrolling, use HorizontalScrollView instead. Never add a RecyclerView or ListView to a scroll view. Doing so results in poor user interface performance and a poor user experience.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="open_receiver_activity">Open Receiver Activity</string>
    <string name="call_phone_number">Call Phone Number</string>
    <string name="single_click">Single click</string>
    <string name="long_click">Long click</string>
    <string name="ui_elements">UI elements</string>
    <string name="spinner_with_food">Spinner with food</string>
    <string name="recyclerview_with_fruits">RecyclerView with fruits</string>
    <string name="activities">Activities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_static">Fragment Static</string>
    <string name="open_website">open website</string>
    <string name="open_location">open location</string>
    <string name="share_text">share text</string>
    <string name="call">call</string>
    <string name="cant_handle">Can not handle it</string>
    <string name="share_text_with">Share text with</string>
    <string name="send_sum">send sum</string>
    <string name="first_number">first number</string>
    <string name="second_number">second number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_label1">TAB 1</string>
    <string name="tab_label2">TAB 2</string>
    <string name="tab_label3">TAB 3</string>
    <string name="tabs">TABS</string>
    <string name="nav_drawer">navigation drawer</string>
    <string name="date_and_datetime_pickers">Date and DateTime pickers</string>
    <string name="datetime_picker">DateTime Picker</string>
    <string name="date_picker">Date Picker</string>
    <string name="open_custom_dialog">Open custom dialog</string>
    <string name="notice">Notice</string>
    <string name="alert_title">Take care</string>
    <string name="launch_app">Launch app</string>
    <string name="reminde_me">Reminde me</string>
    <string name="click">click</string>
    <string name="cancel">Cancel</string>
    <string name="error_occured">error</string>
    <string name="retry">retry</string>
    <string name="retry_message">try again later</string>
    <string name="retrofit_sample">Retrofit Sample</string>
    <string name="file_saved">File saved</string>
    <string name="cannot_save">Can not save</string>
    <string name="cannot_write_external">Can not write external</string>
    <string name="file_name">File name</string>
    <string name="create_file_internal">Create file internal</string>
    <string name="read_file_internal">Read file internal</string>
    <string name="create_file_external">Create file external</string>
    <string name="read_file_external">Read file external</string>
    <string name="room_example">Room example</string>
    <string name="get_data">Get data</string>
</resources>
