<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SumFragment">


    <EditText
        android:id="@+id/editTextFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/first_number" />

    <EditText
        android:id="@+id/editTextSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/second_number" />

    <Button
        android:id="@+id/buttonSendSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sum"></Button>
</LinearLayout>