<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"></EditText>

    <CheckBox
        android:text="@string/accepta_termeni_si_conditii"
        android:id="@+id/checkboxTermeni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></CheckBox>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getValuesOnClick"
        android:text="@string/submit"></Button>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

</LinearLayout>