<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/red"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/hello_world"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:textStyle="bold|italic"></TextView>

    <ImageView
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:scaleType="fitCenter"
        android:src="@drawable/android"></ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/click_me"
        android:textColor="@android:color/white"></Button>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:background="@color/colorAccent"></View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ora"
        android:inputType="textPassword"
        android:paddingTop="16dp"></EditText>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/termeni_si_conditii"></CheckBox>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="da"></RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nu"></RadioButton>
    </RadioGroup>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="2"
        android:stepSize="0.5"
        android:visibility="invisible"></RatingBar>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showText="true"
        android:textOff="off"
        android:textOn="on"></Switch>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="70"></SeekBar>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"></ProgressBar>
</LinearLayout>